sumo/tests/duarouter/errors/network/ok/alts.duarouter
<?xml version="1.0"?>

<!-- generated on 09/08/09 09:47:55 by SUMO duarouter Version dev-SVN-r7683
<configuration>

    <input
        net-file="net.net.xml"
        trip-defs="input_trips.trips.xml"
    />

    <output
        output-file="routes.rou.xml"
    />

</configuration>
-->

<route-alternatives>
   <vehicle id="0" depart="0">
      <routeDistribution last="0">
         <route cost="10.53" probability="1.00000000" edges="1 2"/>
      </routeDistribution>
   </vehicle>
</route-alternatives>
